# allegro

./: .gitignore  .gitmodules  install-allegro.sh  readme.md
1.0/: build.sh  main  main.cpp
1.0/include/: BitmapResource.h  ResourceManager.h
2.0/: build.sh  main  main.cpp  readme.md
2.0/include/: BitmapResource.cpp  Entity.h  ResourceManager.cpp
2.1/: main  main.cpp
2.1/include/: Sprite.h
2.2/: build.sh  main  main.cpp
2.2/include/: AnimatedSprite.cpp  AnimatedSprite.h  BitmapResource.cpp  BitmapResource.h  ResourceManager.h  Sprite.cpp  Sprite.h
2.2/resources/: player-right.json  player1.json
2.3/: CMakeLists.txt  build.sh  main  main.cpp
2.3/include/: AnimatedSprite.cpp  AnimatedSprite.h  AnimationFrame.h  BitmapResource.h  ResourceManager.cpp  SimpleAnimationFrame.cpp  Sprite.h
2.3/resources/: background.xcf  player-left.json  sprites.json  spritesheet1.xcf
game1/: CMakeCache.txt  CMakeLists.txt  CPPLINT.cfg  Makefile  cmake_install.cmake  readme.md
game1/cmake/: FindAllegro.cmake
game1/docs/: .~lock.screen-proportions.ods#  screen-proportions.ods
game1/include/: AnimatedSprite.h  AnimatedSpriteWithSet.h  AnimationFrame.h  AnimationPlayer.h  AnimationSet.h  BitmapResource.h  Entity.h  Game.h  Logging.h  LoggingCustomObjects.h  MultiAnimatedSprite.h  ResourceManager.h  SimpleAnimationFrame.h  Spawner.h  Sprite.h  StringFormat.h  VectorFuncs.h  debug.h  main.h  rpoco_demo.h
game1/include/Spawners/: LambdaSpawner.h  LawnmowerSpawner.h
game1/include/Sprites/: LawnmowerSprite.h
game1/persist/include/: AnimationSetFactory.h  dto.h  rpoco_demo.h
game1/persist/src/: AnimationSetFactory.cpp
game1/resources/: animationframedto.json  animationsetsdto.json  background.xcf  configdto.json  np1animations.json  player1.aseprite  playeranimations.json  sprites.xcf  spritesheet1.xcf
game1/src/: AnimatedSprite.cpp  AnimatedSpriteWithSet.cpp  AnimationSet.cpp  BitmapResource.cpp  Game.cpp  LoggingCustomObjects.cpp  MultiAnimatedSprite.cpp  ResourceManager.cpp  SimpleAnimationFrame.cpp  Spawner.cpp  Sprite.cpp  StringFormat.cpp  main.cpp  main.h
game1/src/Spawners/: LambdaSpawner.cpp  LawnmowerSpawner.cpp
game1/src/Sprites/: LawnmowerSprite.cpp
test1/: animation  animation.c  build.sh  first  first.c  generic-structure  generic-structure.c  keys  keys.c  picture  picture.c  pkgs.txt  primitives  primitives.c  readme.md
